price styles change commit

--- a/price.html
+++ b/price.html
@@ -16,7 +16,7 @@
   <!-- fancybox css -->
   <link rel="stylesheet" href="css/plugins/fancybox.min.css">
     <link rel="stylesheet" href="scss/price.css">
-    <link rel="stylesheet" href="scss/style.css">
+    <!-- <link rel="stylesheet" href="scss/style.css"> -->
     <title>price component</title>
 </head>
 <body>
